# Terminal-Player

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yaml
contrib/: CMakeLists.txt
contrib/C-Thread-Pool/: CMakeLists.txt  example.c
contrib/kdtree/: CMakeLists.txt  Makefile
contrib/kdtree/examples/: Makefile  main  main.c  test  test2
src/: Colors.c  Colors.h  Pallete.c  Pallete.h  TerminalPlayer.c  TerminalPlayer.h  TerminalUtils.c  TerminalUtils.h  main.c
